--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@ header h1 {
   flex: 1;
   min-height: 0;
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
